--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
-    "axios": "^1.5.0"
+    "axios": "^1.5.0",
+    "dotenv": "^16.3.1"
   }
 }
