--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
     "tailwindcss": "^3.3.3"
+  },
+  "dependencies": {
+    "express-handlebars": "^7.1.2",
+    "handlebars": "^4.7.8"
   }
 }
